# impact_social

./: .gitignore  CITATION.cff  CLAUDE.md  README.md  conftest.py  idees-articles.md  requirements.txt
core/: pyproject.toml
core/rex/: __init__.py  edit.py  metrics.py  models.py  why.py
data/: README.md  (+1 more)
solveur/: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
solveur/configs/: direct_haiku.yaml  direct_sonnet.yaml  propose_haiku.yaml
solveur/data_gel/: DONNEES.md
solveur/docs/: dsl_v2_objectale.md
solveur/prompts/: README.md
solveur/prompts/direct_v1/: meta.yaml  template.txt
solveur/prompts/propose_v1/: meta.yaml  template.txt
solveur/reports/: README.md  compare_brute-v1_vs_brute-v2.md  compare_direct-haiku_vs_brute-v1.md  compare_direct-haiku_vs_direct-sonnet.md  compare_pv-haiku-v1_vs_baselines_epic0.md  dsl_v1_fill_background.md  run_brute-v1.md  run_brute-v2.md  run_direct-haiku.md  run_direct-sonnet.md  run_pv-haiku-p1.md  run_pv-haiku-v1.md  taxonomy_epic0.md
solveur/solveur/: __init__.py
solveur/solveur/data/: __init__.py  __main__.py  loader.py  manifest.json  splits.json
solveur/solveur/dsl/: __init__.py  core.py  parse.py
solveur/solveur/eval/: __init__.py  __main__.py  runner.py
solveur/solveur/oracle/: __init__.py  client.py  pricing.yaml
solveur/solveur/report/: __init__.py  __main__.py  report.py  taxonomy.py
solveur/tests/: test_data.py  test_direct_llm.py  test_dsl.py  test_oracle.py  test_parse.py  test_proposer_verifier.py  test_report.py  test_runner.py  test_scaffolding.py  test_taxonomy.py
(+64 files in other folders)
