[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rex"
version = "0.1.0"
description = "Relational Explainability core library: rule-list models, why-operator W, edit operator W⁻¹, explainability curves"
readme = "../README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "numpy",
    "scikit-learn",
    "scipy",
]

[tool.setuptools.packages.find]
include = ["rex*"]
